force-app/main/default/objects/PS_ASU_SR_ASR_INDV__x/PS_ASU_SR_ASR_INDV__x.object-meta.xml
<CustomObject>
    <description>Data source script can be found here: https://docs.google.com/document/d/13kMl_wt66UzBX_NxcJc5yK_wVKYpV1HJSDhKIpfp13Q/edit</description>
    <externalDataSource>MuleOdataApi</externalDataSource>
    <externalName>PS_ASU_SR_ASR_INDVs</externalName>
    <label>Academic Status Report Info (external)</label>
    <pluralLabel>Academic Status Report Info (external)</pluralLabel>
</CustomObject>