force-app/main/default/objects/PS_ASU_SR_ASR_INDV__x/fields/ASU_GRADE_INST_LST__c.field-meta.xml
<CustomField>
    <fullName>ASU_GRADE_INST_LST__c</fullName>
    <description>Data sourced from PS_ASU_ACADSTAT_AC.GRADE_ACTION_DESC</description>
    <externalDeveloperName>ASU_GRADE_INST_LST</externalDeveloperName>
    <label>Grade Instructions</label>
    <type>TextArea</type>
</CustomField>