force-app/main/default/objects/PS_ASU_SR_ASR_INDV__x/fields/ASU_GRADE_RSN_LIST__c.field-meta.xml
<CustomField>
    <fullName>ASU_GRADE_RSN_LIST__c</fullName>
    <description>Data sourced from PS_ASU_ACADSTAT_RE.GRADE_REASON_DESC</description>
    <externalDeveloperName>ASU_GRADE_RSN_LIST</externalDeveloperName>
    <label>Grade Reason</label>
    <type>TextArea</type>
</CustomField>