force-app/main/default/objects/PS_ASU_SR_ASR_INDV__x/fields/CLASS_NBR__c.field-meta.xml
<CustomField>
    <fullName>CLASS_NBR__c</fullName>
    <description>Data sourced from PS_ASU_ACAD_STATUS.CLASS_NBR</description>
    <externalDeveloperName>CLASS_NBR</externalDeveloperName>
    <label>Course Id</label>
    <length>8</length>
    <type>Text</type>
</CustomField>