force-app/main/default/objects/PS_ASU_SR_ASR_INDV__x/fields/COMMENT1__c.field-meta.xml
<CustomField>
    <fullName>COMMENT1__c</fullName>
    <description>Data sourced from PS_ASU_ACAD_STATUS.DESCR_254_MIXED</description>
    <externalDeveloperName>COMMENT1</externalDeveloperName>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>