force-app/main/default/objects/PS_ASU_SR_ASR_INDV__x/fields/COURSE_SQC__c.field-meta.xml
<CustomField>
    <fullName>COURSE_SQC__c</fullName>
    <description>Data sourced from PS_ASU_A_CLASS.SUBJECT, CATALOG_NBR</description>
    <externalDeveloperName>COURSE_SQC</externalDeveloperName>
    <label>Course</label>
    <length>10</length>
    <type>Text</type>
</CustomField>