force-app/main/default/objects/PS_ASU_SR_ASR_INDV__x/fields/COURSE_TITLE__c.field-meta.xml
<CustomField>
    <fullName>COURSE_TITLE__c</fullName>
    <description>Data sourced from PS_ASU_A_CLASS.DESCR</description>
    <externalDeveloperName>COURSE_TITLE</externalDeveloperName>
    <label>Title</label>
    <length>55</length>
    <type>Text</type>
</CustomField>