force-app/main/default/objects/PS_ASU_SR_ASR_INDV__x/fields/CRSE_GRADE_INPUT__c.field-meta.xml
<CustomField>
    <fullName>CRSE_GRADE_INPUT__c</fullName>
    <description>Data sourced from PS_ASU_ACAD_STATUS.CRSE_GRADE_INPUT</description>
    <externalDeveloperName>CRSE_GRADE_INPUT</externalDeveloperName>
    <label>Grade</label>
    <length>4</length>
    <type>Text</type>
</CustomField>