force-app/main/default/objects/PS_ASU_SR_ASR_INDV__x/fields/ENROLLED__c.field-meta.xml
<CustomField>
    <fullName>ENROLLED__c</fullName>
    <description>Data sourced from PS_ASU_ACAD_STATUS.STDNT_ENRL_STATUS</description>
    <externalDeveloperName>ENROLLED</externalDeveloperName>
    <label>Enrolled</label>
    <length>1</length>
    <type>Text</type>
</CustomField>