force-app/main/default/objects/PS_ASU_SR_ASR_INDV__x/fields/INSTITUTION__c.field-meta.xml
<CustomField>
    <fullName>INSTITUTION__c</fullName>
    <description>Data sourced from PS_ASU_ACAD_STATUS.INSTITUTION</description>
    <externalDeveloperName>INSTITUTION</externalDeveloperName>
    <label>Institution</label>
    <length>6</length>
    <type>Text</type>
</CustomField>