force-app/main/default/objects/PS_ASU_SR_ASR_INDV__x/fields/SEQNUM__c.field-meta.xml
<CustomField>
    <fullName>SEQNUM__c</fullName>
    <description>Data sourced from PS_ASU_ACAD_STATUS.SEQNUM</description>
    <label>Sequence Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>