force-app/main/default/objects/PS_ASU_SR_ASR_INDV__x/fields/SESSION_CODE__c.field-meta.xml
<CustomField>
    <fullName>SESSION_CODE__c</fullName>
    <description>Data sourced from PS_ASU_ACAD_STATUS.SESSION_CODE</description>
    <externalDeveloperName>SESSION_CODE</externalDeveloperName>
    <label>Session</label>
    <length>4</length>
    <type>Text</type>
</CustomField>